--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                         <img class="img-fluid w-100" src="img/strproject.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                             <a href="img/strproject.pg" data-lightbox="portfolio">
-						<a href="STR710.pdf" target="_blank">
+						<a href="STRPROJECTFINAL.pdf" target="_blank">
                                                 <i class="fa fa-4x fa-plus text-white"></i>
                                             </a>
 											</a>
