--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                       
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
-                        <a href="" class="btn btn-block border-right">Download CV</a>
+                        <a href="ShaniPitaru-CVENG.pdf" class="btn btn-block border-right">Download CV</a>
                         <a href="#contact" class="btn btn-block btn-scroll">Contact Me</a>
                     </div>
                 </div>
