--- a/index.html
+++ b/index.html
@@ -156,21 +156,26 @@
                             <div class="border-left border-primary pt-2 pl-4 ml-2">
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
-                                    <h5 class="mb-1">Web Designer</h5>
-                                    <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-                                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                                    <h5 class="mb-1">QA and Automation Training</h5>
+                                    <p class="mb-2">Automation College (Gal Matalon) | <small>2024</small></p>
+                                    <p>Experienced QA professional with expertise in multiple testing methodologies (Agile, Waterfall), 
+					tools (TestRail, Jira, Postman), and platforms (web, mobile). Skilled in functional, UI/UX testing, 
+					with proven bug identification and documentation abilities.</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
-                                    <h5 class="mb-1">Web Designer</h5>
-                                    <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-                                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                                    <h5 class="mb-1">Technical Support</h5>
+                                    <p class="mb-2">TeleMessage | <small>2022-2023</small></p>
+                                    <p>Technical support specialist experienced in troubleshooting mobile applications, 
+					utilizing SQL queries and API investigations. Proficient in Salesforce CRM, 
+					collaborating cross-functionally with QA, Development, and Support teams for comprehensive problem-solving.</p>
                                 </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
-                                    <h5 class="mb-1">Web Designer</h5>
-                                    <p class="mb-2">Soft Company | <small>2000 - 2050</small></p>
-                                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                                    <h5 class="mb-1">Technical Support</h5>
+                                    <p class="mb-2">Verifone | <small>2019 - 20222</small></p>
+                                    <p>Remote troubleshooting of complex POS issues.
+					Utilized various command-line tools (telnet, ping)</p>
                                 </div>
                             </div>
                         </div>
