--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                    <img class="w-100 img-fluid mb-4" src="img/pictureme5size.jpg" alt="Image">
+                    <img class="w-100 img-fluid mb-4" src="img/picturemeport.jpg" alt="Image">
                     <h1 class="mt-2">Shani Pitaru</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
