--- a/index.html
+++ b/index.html
@@ -78,71 +78,40 @@
 
 
                 <!-- Skills Start -->
-                <div class="container bg-white py-5">
-                    <div class="row px-3">
-                        <div class="col-12">
-                            <h2 class="title position-relative pb-2 mb-4">Skills</h2>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="skill mb-4">
-                                <div class="d-flex justify-content-between">
-                                    <p class="mb-2">HTML</p>
-                                    <p class="mb-2">95%</p>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="skill mb-4">
-                                <div class="d-flex justify-content-between">
-                                    <p class="mb-2">CSS</p>
-                                    <p class="mb-2">85%</p>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="skill mb-4">
-                                <div class="d-flex justify-content-between">
-                                    <p class="mb-2">API</p>
-                                    <p class="mb-2">75%</p>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="skill mb-4">
-                                <div class="d-flex justify-content-between">
-                                    <p class="mb-2">SQL</p>
-                                    <p class="mb-2">95%</p>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="skill mb-4">
-                                <div class="d-flex justify-content-between">
-                                    <p class="mb-2">TestRail</p>
-                                    <p class="mb-2">95%</p>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                            <div class="skill mb-4">
-                                <div class="d-flex justify-content-between">
-                                    <p class="mb-2">STD</p>
-                                    <p class="mb-2">100%</p>
-                                </div>
-                                <div class="progress">
-                                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Skills Start -->
+<div class="container bg-white pt-5 pb-3">
+    <div class="row px-3">
+        <div class="col-12">
+            <h2 class="title position-relative pb-2 mb-4">Skills</h2>
+        </div>
+        <div class="col-md-4 service-item text-center mb-4">
+            <i class="fa fa-2x fa-code mx-auto mb-3 text-primary"></i>
+            <h5 class="mb-2">HTML</h5>
+        </div>
+        <div class="col-md-4 service-item text-center mb-4">
+            <i class="fa fa-2x fa-paint-brush mx-auto mb-3 text-warning"></i>
+            <h5 class="mb-2">CSS</h5>
+        </div>
+        <div class="col-md-4 service-item text-center mb-4">
+            <i class="fa fa-2x fa-plug mx-auto mb-3 text-danger"></i>
+            <h5 class="mb-2">API</h5>
+        </div>
+        <div class="col-md-4 service-item text-center mb-4">
+            <i class="fa fa-2x fa-database mx-auto mb-3 text-danger"></i>
+            <h5 class="mb-2">SQL</h5>
+        </div>
+        <div class="col-md-4 service-item text-center mb-4">
+            <i class="fa fa-2x fa-check-square mx-auto mb-3 text-dark"></i>
+            <h5 class="mb-2">TestRail</h5>
+        </div>
+        <div class="col-md-4 service-item text-center mb-4">
+            <i class="fa fa-2x fa-file-alt mx-auto mb-3 text-info"></i>
+            <h5 class="mb-2">STD</h5>
+        </div>
+    </div>
+</div>
+<!-- Skills End -->
+
                 <!-- Skills End -->
 
 
