--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
                         <div class="typed-text d-none">QA Testing, Software Testing, Quality Enigeer, QA Specialist</div>
                     </div>
-					<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">
+					<!--<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">-->
+					<img class="w-100 img-fluid mb-4" src="img/pictureme5size.jpg" alt="Image">
+
                     <div class="d-flex justify-content-center mt-auto mb-3">
                        
                         <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/shani-pitaru/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
