--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="typed-text d-none">QA Testing, Software Testing, Quality Enigeer, QA Specialist</div>
                     </div>
 					<!--<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">-->
-					<img class="w-100 img-fluid mb-4" src="img/pictureme5size.jpg" alt="Image">
+					<img class="w-100 img-fluid mb-4" src="img/ShaniPitaru.svg" alt="Image">
 
                     <div class="d-flex justify-content-center mt-auto mb-3">
                        
