--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                         <div class="typed-text d-none">QA Testing, Software Testing, Quality Enigeer, QA Specialist</div>
                     </div>
 					<!--<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">-->
-					<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">
+					<img src="img/ShaniPitaru.svg"
+    							 alt="Shani Pitaru Logo"
+  							   style="max-width: 70%; display: block; margin: 20px auto 30px; object-fit: contain;" />
 
 
                     <div class="d-flex justify-content-center mt-auto mb-3">
