--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     </div>
 					<!--<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">-->
 					<img src="img/ShaniPitaru.svg"
-    							 alt="Shani Pitaru Logo"
-  							   style="max-width: 70%; display: block; margin: 20px auto 30px; object-fit: contain;" />
+     alt="Shani Logo"
+     style="max-width: 200px; margin: 20px auto 40px; display: block;" />
 
 
                     <div class="d-flex justify-content-center mt-auto mb-3">
@@ -247,7 +247,7 @@
                                 </div>
                             </div> -->
 
-				    <div class="col-md-8 offset-md-2 mb-4 portfolio-item first">
+			<div class="col-md-8 offset-md-2 mb-4 portfolio-item first">
     <div class="position-relative overflow-hidden mb-2">
         <img class="img-fluid w-100" src="img/strproject.png" alt="STR Project">
         <div class="portfolio-btn d-flex align-items-center justify-content-center">
@@ -257,6 +257,7 @@
         </div>
     </div>
 </div>
+
 
                      
                  
