--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                         <div class="typed-text d-none">QA Testing, Software Testing, Quality Enigeer, QA Specialist</div>
                     </div>
 					<!--<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">-->
-					<img src="img/ShaniPitaru.svg"
-     alt="Shani Logo"
-     style="max-width: 200px; margin: 20px auto 40px; display: block;" />
+					<div style="display: flex; justify-content: center; align-items: center; margin: 20px 0;">
+    <img src="img/ShaniPitaru.svg" alt="Shani Logo"
+         style="max-width: 80%; height: auto; display: block;" />
+</div>
+
 
 
                     <div class="d-flex justify-content-center mt-auto mb-3">
@@ -245,7 +247,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div> 
 
 			<div class="col-md-8 offset-md-2 mb-4 portfolio-item first">
     <div class="position-relative overflow-hidden mb-2">
@@ -256,7 +258,19 @@
             </a>
         </div>
     </div>
+</div> -->
+
+				    <div class="col-md-8 offset-md-2 mb-4 portfolio-item first">
+    <div class="position-relative overflow-hidden mb-2">
+        <img class="img-fluid w-100" src="img/strproject.png" alt="STR Project">
+        <div class="portfolio-btn d-flex align-items-center justify-content-center">
+            <a href="https://drive.google.com/file/d/1ogCREUrS-wglkLss7CV4x3ckw4NkehBr/view?usp=sharing" target="_blank">
+                <i class="fa fa-4x fa-plus text-white"></i>
+            </a>
+        </div>
+    </div>
 </div>
+
 
 
                      
