--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-4">Expericence</h2>
                         </div>
+			<div class="col-12">
+                            <div class="border-left border-primary pt-2 pl-4 ml-2">
+                                <div class="position-relative mb-4">
+                                    <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
+                                    <h5 class="mb-1">Juinor QA</h5>
+                                    <p class="mb-2">Elbit Systems (via Qualitest) | <small>Dec 2024 – Present</small></p>
+                                    <p>QA Tester in a lab environment, responsible for manual testing, collaborating closely with developers, engineers, and team members. 
+					    Working with Jira, Linux, and ensuring smooth and efficient daily operations. 
+					    Known for a thorough and methodical approach, taking ownership of activities, and maintaining high standards.</p>
+                                </div>    
                         <div class="col-12">
                             <div class="border-left border-primary pt-2 pl-4 ml-2">
                                 <div class="position-relative mb-4">
