--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="container bg-white py-5">
                     <div class="row px-3">
                         <div class="col-12">
-                            <h2 class="title position-relative pb-2 mb-0">About Me</h2>
+                            <h2 class="title position-relative pb-2 mb-0" id="About">About Me</h2>
                         </div>
                         <div class="col-12">
                             <p>As a tech enthusiast who loves solving puzzles, I've found my calling in the world of technology. My journey through technical support has given me hands-on experience with networks, APIs, and SQL, while my curiosity has led me to explore Java programming. When I'm not diving into logs or troubleshooting, you'll find me working on my passion project - a website where I teach metal vocal techniques. This blend of analytical thinking and creativity makes me eager to bring my attention to detail and problem-solving skills to a QA role.</p>
