--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                    <img class="w-100 img-fluid mb-4" src="img/picturemeport.jpeg" alt="Image">
+                    <img src="images/profile.jpg" alt="My photo" class="profile-img">
                     <h1 class="mt-2">Shani Pitaru</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
@@ -64,8 +64,18 @@
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-0" id="About">About Me</h2>
                         </div>
-                        <div class="col-12">
-                            <p>As a tech enthusiast who loves solving puzzles, I've found my calling in the world of technology. My journey through technical support has given me hands-on experience with networks, APIs, and SQL, while my curiosity has led me to explore Java programming. When I'm not diving into logs or troubleshooting, you'll find me working on my passion project - a website where I teach metal vocal techniques. This blend of analytical thinking and creativity makes me eager to bring my attention to detail and problem-solving skills to a QA role.</p>
+                       		<section id="about" class="container py-5">
+  <h2 class="mb-4">About Me</h2>
+  <ul class="list-unstyled">
+    <li>💡 Tech enthusiast with a passion for solving complex problems and puzzles</li>
+    <li>🧩 Hands-on experience in technical support, working with networks, APIs, and SQL</li>
+    <li>📚 Self-taught programmer exploring Java development in my spare time</li>
+    <li>🎤 Creative side project – built and maintain a website teaching metal vocal techniques</li>
+    <li>🧠 Unique blend of analytical thinking and creativity</li>
+    <li>🔍 Detail-oriented problem-solver with a QA mindset</li>
+  </ul>
+</section>
+
                             <div class="row">
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Name:</h5> Shani Pitaru
@@ -80,6 +90,21 @@
                 </div>
                 <!-- About End -->
 
+		<!-- Automation Start -->
+		<section id="automation" class="container py-5">
+  <h2 class="mb-4">QA Automation</h2>
+  <p>Recently completed automation studies focused on Python and testing fundamentals:</p>
+  <ul class="list-unstyled">
+    <li>✅ Built automation infrastructure using <strong>Page Object Model (POM)</strong></li>
+    <li>🐍 Written and run tests using <strong>pytest</strong></li>
+    <li>📊 Integrated <strong>Allure</strong> for advanced test reporting</li>
+    <li>👩‍💻 Used <strong>PyCharm</strong> for development and version control with <strong>GitHub</strong></li>
+  </ul>
+  <div class="embed-responsive embed-responsive-16by9 mt-4">
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+  </div>
+</section>
+		<!-- Automation End -->
 
                 <!-- Skills Start -->
                 <!-- Skills Start -->
