--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
     <li>📊 Integrated <strong>Allure</strong> for advanced test reporting</li>
     <li>👩‍💻 Used <strong>PyCharm</strong> for development and version control with <strong>GitHub</strong></li>
   </ul>
-  <div class="embed-responsive embed-responsive-16by9 mt-4">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
+ <div class="video-container">
+  <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+</div>
+
   </div>
 </section>
 		<!-- Automation End -->
