--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                    <img src="img/picturemeport.jpeg" alt="My photo" class="profile-img">
+                    <img src="img/picturemeport.jpeg" alt="My photo" class="profile-img" align="center">
                     <h1 class="mt-2">Shani Pitaru</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
@@ -63,19 +63,15 @@
                     <div class="row px-3">
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-0" id="About">About Me</h2>
-                        </div>
-                       		<section id="about" class="container py-5">
-  <h2 class="mb-4">About Me</h2>
-  <ul class="list-unstyled">
+				 <ul class="list-unstyled">
     <li>💡 Tech enthusiast with a passion for solving complex problems and puzzles</li>
     <li>🧩 Hands-on experience in technical support, working with networks, APIs, and SQL</li>
     <li>📚 Self-taught programmer exploring Java development in my spare time</li>
-    <li>🎤 Creative side project – built and maintain a website teaching metal vocal techniques</li>
+    <li>🎤 Creative side project – built and maintained a website teaching metal vocal techniques</li>
     <li>🧠 Unique blend of analytical thinking and creativity</li>
     <li>🔍 Detail-oriented problem-solver with a QA mindset</li>
   </ul>
-</section>
-
+                        </div>
                             <div class="row">
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Name:</h5> Shani Pitaru
@@ -91,7 +87,10 @@
                 <!-- About End -->
 
 		<!-- Automation Start -->
-		<section id="automation" class="container py-5">
+		<div class="container bg-white pt-5 pb-3">
+    <div class="row px-3">
+        <div class="col-12">
+            <h2 class="title position-relative pb-2 mb-4">Automation</h2>
   <h2 class="mb-4">QA Automation</h2>
   <p>Recently completed automation studies focused on Python and testing fundamentals:</p>
   <ul class="list-unstyled">
@@ -105,7 +104,6 @@
 </div>
 
   </div>
-</section>
 		<!-- Automation End -->
 
                 <!-- Skills Start -->
