--- a/index.html
+++ b/index.html
@@ -36,13 +36,9 @@
                     <h1 class="mt-2">Shani Pitaru</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
-                        <div class="typed-text d-none">QA Testing, Software Testing, Quality Enigeer, QA Specialist</div>
+                        <div class="typed-text d-none">QA Testing, Software Testing, Quality Engineer, QA Specialist</div>
                     </div>
 					<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">
-				
-
-
-
                     <div class="d-flex justify-content-center mt-auto mb-3">
                        
                         <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/shani-pitaru/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -59,10 +55,10 @@
             </div>
             <div class="content">
                 <!-- About Start -->
-                <div class="container bg-white py-5">
-                    <div class="row px-3">
-                        <div class="col-12">
-                            <h2 class="title position-relative pb-2 mb-0" id="About">About Me</h2>
+                <div class="container bg-white pt-5 pb-3">
+    <div class="row px-3">
+        <div class="col-12">
+            <h2 class="title position-relative pb-2 mb-4">About</h2>
 				 <ul class="list-unstyled">
     <li>💡 Tech enthusiast with a passion for solving complex problems and puzzles</li>
     <li>🧩 Hands-on experience in technical support, working with networks, APIs, and SQL</li>
