--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                    <img src="img/picturemeport.jpeg" alt="My photo" class="profile-img" align="center">
+                    <img src="img/picturemeport.jpeg" alt="My photo" class="profile-img mx-auto d-block" align="center">
                     <h1 class="mt-2">Shani Pitaru</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
@@ -55,11 +55,11 @@
             </div>
             <div class="content">
                 <!-- About Start -->
-                <div class="container bg-white pt-5 pb-3">
-    <div class="row px-3">
-        <div class="col-12">
-            <h2 class="title position-relative pb-2 mb-4">About</h2>
-				 <ul class="list-unstyled">
+                <section class="container text-center py-5">
+  <img src="images/profile.jpg" alt="My photo" class="profile-img mb-4">
+  <h1 class="mb-3">Shani P.</h1>
+  <p class="lead">
+   <ul class="list-unstyled">
     <li>💡 Tech enthusiast with a passion for solving complex problems and puzzles</li>
     <li>🧩 Hands-on experience in technical support, working with networks, APIs, and SQL</li>
     <li>📚 Self-taught programmer exploring Java development in my spare time</li>
@@ -67,6 +67,8 @@
     <li>🧠 Unique blend of analytical thinking and creativity</li>
     <li>🔍 Detail-oriented problem-solver with a QA mindset</li>
   </ul>
+  </p>
+
                         </div>
                             <div class="row">
                                 <div class="col-sm-6 py-1">
@@ -80,6 +82,7 @@
                         </div>
                     </div>
                 </div>
+	    </section>
                 <!-- About End -->
 
 		<!-- Automation Start -->
