--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
         <div class="wrapper">
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
-                    <img src="img/picturemeport.jpeg" alt="My photo" class="profile-img mx-auto d-block" align="center">
+                    <div class="text-center">
+  <img src="img/picturemeport.jpeg" alt="My photo" class="rounded-circle img-fluid mb-3" style="width: 180px; height: 180px; object-fit: cover; object-position: center;">
+</div>
+
                     <h1 class="mt-2">Shani Pitaru</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-body"></h4>
                         <div class="typed-text d-none">QA Testing, Software Testing, Quality Engineer, QA Specialist</div>
                     </div>
 					<img src="img/ShaniPitaru.svg" style="max-width: 250px;" align="center">
+				
+
+
+
                     <div class="d-flex justify-content-center mt-auto mb-3">
                        
                         <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/shani-pitaru/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -55,21 +62,13 @@
             </div>
             <div class="content">
                 <!-- About Start -->
-                <section class="container text-center py-5">
-  <img src="images/profile.jpg" alt="My photo" class="profile-img mb-4">
-  <h1 class="mb-3">Shani P.</h1>
-  <p class="lead">
-   <ul class="list-unstyled">
-    <li>💡 Tech enthusiast with a passion for solving complex problems and puzzles</li>
-    <li>🧩 Hands-on experience in technical support, working with networks, APIs, and SQL</li>
-    <li>📚 Self-taught programmer exploring Java development in my spare time</li>
-    <li>🎤 Creative side project – built and maintained a website teaching metal vocal techniques</li>
-    <li>🧠 Unique blend of analytical thinking and creativity</li>
-    <li>🔍 Detail-oriented problem-solver with a QA mindset</li>
-  </ul>
-  </p>
-
+                <div class="container bg-white py-5">
+                    <div class="row px-3">
+                        <div class="col-12">
+                            <h2 class="title position-relative pb-2 mb-0" id="About">About Me</h2>
                         </div>
+                        <div class="col-12">
+                            <p>As a tech enthusiast who loves solving puzzles, I've found my calling in the world of technology. My journey through technical support has given me hands-on experience with networks, APIs, and SQL, while my curiosity has led me to explore Java programming. When I'm not diving into logs or troubleshooting, you'll find me working on my passion project - a website where I teach metal vocal techniques. This blend of analytical thinking and creativity makes me eager to bring my attention to detail and problem-solving skills to a QA role.</p>
                             <div class="row">
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Name:</h5> Shani Pitaru
@@ -82,28 +81,8 @@
                         </div>
                     </div>
                 </div>
-	    </section>
                 <!-- About End -->
 
-		<!-- Automation Start -->
-		<div class="container bg-white pt-5 pb-3">
-    <div class="row px-3">
-        <div class="col-12">
-            <h2 class="title position-relative pb-2 mb-4">Automation</h2>
-  <h2 class="mb-4">QA Automation</h2>
-  <p>Recently completed automation studies focused on Python and testing fundamentals:</p>
-  <ul class="list-unstyled">
-    <li>✅ Built automation infrastructure using <strong>Page Object Model (POM)</strong></li>
-    <li>🐍 Written and run tests using <strong>pytest</strong></li>
-    <li>📊 Integrated <strong>Allure</strong> for advanced test reporting</li>
-    <li>👩‍💻 Used <strong>PyCharm</strong> for development and version control with <strong>GitHub</strong></li>
-  </ul>
- <div class="video-container">
-  <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-</div>
-
-  </div>
-		<!-- Automation End -->
 
                 <!-- Skills Start -->
                 <!-- Skills Start -->
