--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
                             <h2 class="title position-relative pb-2 mb-0" id="About">About Me</h2>
                         </div>
                         <div class="col-12">
-                            <p>As a tech enthusiast who loves solving puzzles, I've found my calling in the world of technology. My journey through technical support has given me hands-on experience with networks, APIs, and SQL, while my curiosity has led me to explore Java programming. When I'm not diving into logs or troubleshooting, you'll find me working on my passion project - a website where I teach metal vocal techniques. This blend of analytical thinking and creativity makes me eager to bring my attention to detail and problem-solving skills to a QA role.</p>
+				
+    <ul style="line-height:1.6; list-style:disc; padding-left:20px">
+      <li>Tech enthusiast with a passion for solving complex problems and puzzles</li>
+      <li>Hands-on experience in technical support, working with networks, APIs, and SQL</li>
+      <li>Self-taught programmer exploring Java development in my spare time</li>
+      <li>Creative side project – built and maintained a website teaching metal vocal techniques</li>
+      <li>Unique blend of analytical thinking and creativity; great at identifying edge cases and user scenarios</li>
+      <li>Detail‑oriented problem‑solver ready to bring thoroughness and curiosity to QA testing</li>
+    </ul>
                             <div class="row">
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Name:</h5> Shani Pitaru
