--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
                         </div>
                         <div class="col-12">
 				
-    <ul style="line-height:1.6; list-style:disc; padding-left:20px">
-      <li>Tech enthusiast with a passion for solving complex problems and puzzles</li>
-      <li>Hands-on experience in technical support, working with networks, APIs, and SQL</li>
-      <li>Self-taught programmer exploring Java development in my spare time</li>
-      <li>Creative side project – built and maintained a website teaching metal vocal techniques</li>
-      <li>Unique blend of analytical thinking and creativity; great at identifying edge cases and user scenarios</li>
-      <li>Detail‑oriented problem‑solver ready to bring thoroughness and curiosity to QA testing</li>
-    </ul>
+    <ul class="list-unstyled">
+    <li>💡 Tech enthusiast with a passion for solving complex problems and puzzles</li>
+    <li>🧩 Hands-on experience in technical support, working with networks, APIs, and SQL</li>
+    <li>📚 Self-taught programmer exploring Java development in my spare time</li>
+    <li>🎤 Creative side project – built and maintained a website teaching metal vocal techniques</li>
+    <li>🧠 Unique blend of analytical thinking and creativity</li>
+    <li>🔍 Detail-oriented problem-solver with a QA mindset</li>
                             <div class="row">
                                 <div class="col-sm-6 py-1">
                                     <h5 class="d-inline text-primary">Name:</h5> Shani Pitaru
