--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <!-- Automation Skills Grid -->
 
             <div class="col-md-4 service-item text-center mb-4">
-                    <i class="fa-python fa fa-2x fa-code mx-auto mb-3 text-primary"></i>
+                    <i class="fab fa-python fa-2x mx-auto mb-3 text-primary"></i>
                     <h5 class="mb-2">Python Programming</h4>
                 </div>
 
