--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                         </div>
                                     </div>
                                 </div> 
-                                <div class="col-md-6 mb-4 portfolio-item first">
+                                <div class="col-md-6 mb-4 portfolio-item first mx-auto">
                                     <div class="position-relative overflow-hidden mb-2">
                                         <img class="img-fluid w-100" src="img/strphone.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
