--- a/index.html
+++ b/index.html
@@ -317,11 +317,27 @@
 						<a href="STRPROJECTFINAL.pdf" target="_blank">
                                                 <i class="fa fa-4x fa-plus text-white"></i>
                                             </a>
-											</a>
                                         </div>
                                     </div>
                                 </div> 
-                                <div class="col-md-6 mb-4 portfolio-item first mx-auto">
+
+				    <div class="col-12 mb-4 portfolio-item first">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="position-relative overflow-hidden mb-2">
+                <img class="img-fluid w-100" src="img/strphone.png" alt="">
+                <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                    <a href="img/strphone.png" data-lightbox="portfolio">
+                        <a href="STRCocaCola.pdf" target="_blank">
+                            <i class="fa fa-4x fa-plus text-white"></i>
+                        </a>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+      <!--                          <div class="col-md-6 mb-4 portfolio-item first mx-auto">
                                     <div class="position-relative overflow-hidden mb-2">
                                         <img class="img-fluid w-100" src="img/strphone.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
@@ -334,7 +350,7 @@
                                     </div>
                                 </div>
                             </div> 
-       
+       -->
                 <!-- Portfolio End -->
 
 
