--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
 				    <div class="col-12 mb-4 portfolio-item first">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-4">
             <div class="position-relative overflow-hidden mb-2">
                 <img class="img-fluid w-100" src="img/strphone.png" alt="">
                 <div class="portfolio-btn d-flex align-items-center justify-content-center">
