--- a/index.html
+++ b/index.html
@@ -321,23 +321,8 @@
                                     </div>
                                 </div> 
 
-				    <div class="col-12 mb-4 portfolio-item first">
-    <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-4">
-            <div class="position-relative overflow-hidden mb-2">
-                <img class="img-fluid w-100" src="img/strphone.png" alt="">
-                <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                    <a href="img/strphone.png" data-lightbox="portfolio">
-                        <a href="STRCocaCola.pdf" target="_blank">
-                            <i class="fa fa-4x fa-plus text-white"></i>
-                        </a>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-      <!--                          <div class="col-md-6 mb-4 portfolio-item first mx-auto">
+				    
+                               <div class="col-md-6 mb-4 portfolio-item first mx-auto">
                                     <div class="position-relative overflow-hidden mb-2">
                                         <img class="img-fluid w-100" src="img/strphone.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
@@ -350,7 +335,10 @@
                                     </div>
                                 </div>
                             </div> 
-       -->
+       <!-- אחרי התמונה השלישית הוסיפי: -->
+<div class="col-md-6 mb-4 portfolio-item first" style="visibility: hidden;">
+    <!-- תמונה ריקה כדי למלא את המקום -->
+</div>
                 <!-- Portfolio End -->
 
 
