--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <h5 class="mb-2">Allure Reports</h4>
                 </div>
         
-        <!-- Video and Screenshots Section -->
+        <!-- Video and Screenshots Section 
         <div class="row g-4">
             <div class="col-lg-6">
                 <h3 class="title position-relative text-uppercase pb-3 mb-4">Demo Video</h3>
@@ -322,7 +322,7 @@
                                 </div> 
 
 				    
-                               <div class="col-md-6 mb-4 portfolio-item first mx-auto">
+                               <div class="col-md-6 mb-4 portfolio-item first mx-auto ">
                                     <div class="position-relative overflow-hidden mb-2">
                                         <img class="img-fluid w-100" src="img/strphone.png" alt="">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
