--- a/index.html
+++ b/index.html
@@ -167,15 +167,15 @@
                     <h5 class="mb-2">Allure Reports</h4>
                 </div>
         
-        <!-- Video and Screenshots Section 
+        <!-- Video and Screenshots Section -->
         <div class="row g-4">
             <div class="col-lg-6">
                 <h3 class="title position-relative text-uppercase pb-3 mb-4">Demo Video</h3>
                 <div class="bg-light rounded p-4 text-center" style="min-height: 250px; border: 2px dashed #78CC6D;">
-                    <i class="fa fa-play-circle fa-4x text-primary mb-3"></i>
-                    <h5 class="text-primary mb-3">Automation Testing Demo</h5>
-                    <p class="text-muted mb-2">Upload your automation testing demo video here</p>
-                    <small class="text-muted">Showcase your testing framework in action</small>
+                        <video width="100%" height="250" controls class="rounded">
+                <source src="AutomationVideo.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
                 </div>
             </div>
             
@@ -426,3 +426,4 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
