--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="row g-4">
             <div class="col-lg-6">
                 <h3 class="title position-relative text-uppercase pb-3 mb-4">Demo Video</h3>
-                <div class="bg-light rounded p-4 text-center" style="min-height: 250px; border: 2px dashed #78CC6D;">
+                <div class="bg-light rounded p-4 text-center">
                         <video width="100%" height="250" controls class="rounded">
                 <source src="AutomationVideo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -426,4 +426,5 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
