--- a/index.html
+++ b/index.html
@@ -167,31 +167,34 @@
                     <h5 class="mb-2">Allure Reports</h4>
                 </div>
         
-        <!-- Video and Screenshots Section -->
-        <div class="row g-4">
-            <div class="col-lg-6">
-                <h3 class="title position-relative text-uppercase pb-3 mb-4">Demo Video</h3>
-                <div class="bg-light rounded p-4 text-center">
-                        <video width="100%" height="250" controls class="rounded">
+        <!-- Demo Video Section -->
+<div class="container bg-white pt-5 pb-3">
+    <div class="row px-3">
+        <div class="col-12">
+            <h2 class="title position-relative pb-2 mb-4">Demo Video</h2>
+        </div>
+        <div class="col-12 text-center">
+            <video width="100%" height="400" controls class="rounded">
                 <source src="AutomationVideo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-                </div>
-            </div>
-            
-            <div class="col-lg-6">
-                <h3 class="title position-relative text-uppercase pb-3 mb-4">Test Reports</h3>
-                <div class="bg-light rounded p-4 text-center" style="min-height: 250px; border: 2px dashed #78CC6D;">
-                    <i class="fa fa-images fa-4x text-primary mb-3"></i>
-                    <h5 class="text-primary mb-3">Screenshots & Reports</h5>
-                    <p class="text-muted mb-2">Add screenshots of your test reports and results</p>
-                    <small class="text-muted">Show Allure reports and test coverage</small>
-                </div>
-            </div>
         </div>
     </div>
-<!-- End Automation Skills Section -->
+</div>
 
+<!-- Test Reports Section -->
+<div class="container bg-white pt-5 pb-3">
+    <div class="row px-3">
+        <div class="col-12">
+            <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
+        </div>
+        <div class="col-12 text-center">
+            <!-- כאן תוסיפי את התמונות שלך -->
+            <img src="path/to/your-report1.png" alt="Test Report 1" class="img-fluid rounded mb-3">
+            <img src="path/to/your-report2.png" alt="Test Report 2" class="img-fluid rounded mb-3">
+        </div>
+    </div>
+</div>
    <!-- Experince -->
   <div class="container bg-white py-5">
     <div class="row px-3">
@@ -426,5 +429,6 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
