--- a/index.html
+++ b/index.html
@@ -60,6 +60,26 @@
                     <i class="fas fa-2x fa-angle-double-right text-primary"></i>
                 </div>
             </div>
+			<!-- Navigation Buttons -->
+<div class="container bg-white py-4">
+    <div class="row px-3">
+        <div class="col-12 text-center">
+            <div class="btn-group-toggle flex-wrap d-flex justify-content-center" data-toggle="buttons">
+                <a href="#about" class="btn btn-outline-primary btn-scroll m-1">About Me</a>
+                <a href="#skills" class="btn btn-outline-primary btn-scroll m-1">Skills</a>
+                <a href="#automation" class="btn btn-outline-primary btn-scroll m-1">Automation</a>
+                <a href="#demo-video" class="btn btn-outline-primary btn-scroll m-1">Demo Video</a>
+                <a href="#test-reports" class="btn btn-outline-primary btn-scroll m-1">Test Reports</a>
+                <a href="#experience" class="btn btn-outline-primary btn-scroll m-1">Experience</a>
+                <a href="#services" class="btn btn-outline-primary btn-scroll m-1">Services</a>
+                <a href="#portfolio" class="btn btn-outline-primary btn-scroll m-1">Portfolio</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- About Start -->
+<div class="container bg-white py-5" id="about">
             <div class="content">
                 <!-- About Start -->
                 <div class="container bg-white py-5">
@@ -92,10 +112,10 @@
 
 
                 <!-- Skills Start -->
-<div class="container bg-white pt-5 pb-3">
+<div class="container bg-white pt-5 pb-3" id="skills">
     <div class="row px-3">
         <div class="col-12">
-            <h2 class="title position-relative pb-2 mb-4">Skills</h2>
+            <h2 class="title position-relative pb-2 mb-4" >Skills</h2>
         </div>
         <div class="col-md-4 service-item text-center mb-4">
             <i class="fa fa-2x fa-code mx-auto mb-3 text-primary"></i>
@@ -128,7 +148,7 @@
 
         
         <!-- Intro Text -->
-       <div class="container bg-white pt-5 pb-3">
+       <div class="container bg-white pt-5 pb-3" id="automation">
     <div class="row px-3">
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Automation</h2>
@@ -168,7 +188,7 @@
                 </div>
         
         <!-- Demo Video Section -->
-<div class="container bg-white pt-5 pb-3">
+<div class="container bg-white pt-5 pb-3" id="demo-video">
     <div class="row px-3">
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Demo Video</h2>
@@ -183,7 +203,7 @@
 </div>
 
 <!-- Test Reports Section -->
-<div class="container bg-white pt-5 pb-3">
+<div class="container bg-white pt-5 pb-3" id="test-reports">
     <div class="row px-3">
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
@@ -196,7 +216,7 @@
     </div>
 </div>
    <!-- Experince -->
-  <div class="container bg-white py-5">
+  <div class="container bg-white py-5" id="experience">
     <div class="row px-3">
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Experience</h2>
@@ -253,7 +273,7 @@
 
 
                 <!-- Services Start -->
-                <div class="container bg-white pt-5 pb-3">
+                <div class="container bg-white pt-5 pb-3" id="services">
                     <div class="row px-3">
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-4">Services</h2>
@@ -284,7 +304,7 @@
 
 
                 <!-- Portfolio Start -->
-                <div class="container bg-white pt-5 pb-3">
+               <div class="container bg-white pt-5 pb-3" id="portfolio">
                     <div class="row px-3">
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-4">Portfolio</h2>
@@ -429,6 +449,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
