--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
             </div>
 			<!-- Navigation Buttons -->
 <div class="container bg-white py-5">
-    <div class="row px-3">
-        <div class="col-12 text-center">
+	<div class="content">
+		 <div class="container bg-white py-5">
+  		  <div class="row px-3">
+     		   <div class="col-12 text-center">
             <div class="btn-group-toggle flex-wrap d-flex justify-content-center" data-toggle="buttons">
                 <a href="#about" class="btn btn-outline-primary btn-scroll m-1">About Me</a>
                 <a href="#skills" class="btn btn-outline-primary btn-scroll m-1">Skills</a>
@@ -76,6 +78,8 @@
             </div>
         </div>
     </div>
+</div>
+</div>
 </div>
 
 <!-- About Start -->
@@ -449,6 +453,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
