--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		 <div class="container bg-white py-5">
   		  <div class="row px-3">
      		   <div class="col-12 text-center">
-            <div class="btn-group-toggle flex-wrap d-flex justify-content-center" data-toggle="buttons">
+            <div class="btn-group-toggle flex-wrap d-flex justify-content-center">
                 <a href="#about" class="btn btn-outline-primary btn-scroll m-1">About Me</a>
                 <a href="#skills" class="btn btn-outline-primary btn-scroll m-1">Skills</a>
                 <a href="#automation" class="btn btn-outline-primary btn-scroll m-1">Automation</a>
@@ -453,6 +453,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
