--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <body data-spy="scroll" data-target=".navbar" data-offset="51">
         <div class="wrapper">
             <div class="sidebar">
+			</div>
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                     <div class="text-center">
   <img src="img/picturemeport.jpeg" alt="My photo" class="rounded-circle img-fluid mb-3" style="width: 180px; height: 180px; object-fit: cover; object-position: center;">
@@ -453,6 +454,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
