--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
         </div>
         <div class="col-12 text-center">
             <!-- כאן תוסיפי את התמונות שלך -->
-            <img src="path/to/your-report1.png" alt="Test Report 1" class="img-fluid rounded mb-3">
-            <img src="path/to/your-report2.png" alt="Test Report 2" class="img-fluid rounded mb-3">
+            <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
+            <img src="img/packages.png" alt="Test Report 2" class="img-fluid rounded mb-3">
         </div>
     </div>
 </div>
@@ -453,6 +453,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
