--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="d-flex justify-content-center mt-auto mb-3">
                        
                         <a class="btn btn-outline-primary btn-square mr-2" href="https://www.linkedin.com/in/shani-pitaru/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+						 <a class="btn btn-outline-primary btn-square mr-2" href="https://github.com/shanip89/" target="_blank"><i class="fab fa-github"></i></a>
                       
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
@@ -453,6 +454,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
