--- a/index.html
+++ b/index.html
@@ -215,8 +215,13 @@
         </div>
         <div class="col-12 text-center">
             <!-- כאן תוסיפי את התמונות שלך -->
-            <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
-            <img src="img/packages.png" alt="Test Report 2" class="img-fluid rounded mb-3">
+           <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+    <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
+</a>
+
+<a href="https://shanip89.github.io/FinalAutomation_project/1/index.html#packages" target="_blank">
+    <img src="img/packages.png" alt="Test Report 2" class="img-fluid rounded mb-3">
+</a>
         </div>
     </div>
 </div>
@@ -454,6 +459,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
