--- a/index.html
+++ b/index.html
@@ -217,10 +217,12 @@
             <!-- כאן תוסיפי את התמונות שלך -->
            <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
     <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
+			   <i class="fa fa-4x fa-plus text-white"></i>
 </a>
 
 <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html#packages" target="_blank">
     <img src="img/packages.png" alt="Test Report 2" class="img-fluid rounded mb-3">
+	 <i class="fa fa-4x fa-plus text-white"></i>
 </a>
         </div>
     </div>
@@ -459,6 +461,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
