--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
 </div>
 
-<!-- Test Reports Section 
+<!-- Test Reports Section -->
 <div class="container bg-white pt-5 pb-3" id="test-reports">
     <div class="row px-3">
         <div class="col-12">
@@ -227,43 +227,7 @@
         </div>
     </div>
 </div>
-	<!-- -->
-	<div class="row portfolio-container">
-
-  <!-- תמונה 1 -->
-  <div class="col-md-6 mb-4 portfolio-item">
-    <div class="position-relative overflow-hidden mb-2">
-      <img class="img-fluid w-100" src="img/allurereport.png" alt="Test Report 1">
-      <div class="portfolio-btn d-flex align-items-center justify-content-center">
-        <!-- פתיחת התמונה ב-lightbox -->
-        <a href="img/allurereport.png" data-lightbox="portfolio">
-          <i class="fa fa-4x fa-plus text-white"></i> 
-        </a>
-        <!-- לינק חיצוני לדו"ח -->
-        <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
-          <i class="fa fa-4x fa-external-link text-white"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <!-- תמונה 2 -->
-  <div class="col-md-6 mb-4 portfolio-item">
-    <div class="position-relative overflow-hidden mb-2">
-      <img class="img-fluid w-100" src="img/allurereport2.png" alt="Test Report 2">
-      <div class="portfolio-btn d-flex align-items-center justify-content-center">
-        <a href="img/allurereport2.png" data-lightbox="portfolio">
-          <i class="fa fa-4x fa-plus text-white"></i> 
-        </a>
-        <a href="https://shanip89.github.io/FinalAutomation_project/2/index.html" target="_blank">
-          <i class="fa fa-4x fa-external-link text-white"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-</div>
-
+	
    <!-- Experince -->
   <div class="container bg-white py-5" id="experience">
     <div class="row px-3">
@@ -498,6 +462,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
