--- a/index.html
+++ b/index.html
@@ -213,12 +213,19 @@
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
         </div>
-        <div class="col-12 text-center">
+		<img class="img-fluid w-100" src="img/allurereport.png" alt="">
+                                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
+											<a href="img/allurereport.png" data-lightbox="portfolio">
+												<a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+                                                <i class="fa fa-4x fa-plus text-white"></i> 
+                                            </a>
+                                        </div>
+        <!-- <div class="col-12 text-center">
             <!-- כאן תוסיפי את התמונות שלך -->
            <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
     <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
 			   <i class="fa fa-4x fa-plus text-white"></i>
-</a>
+</a> -->
 
 <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html#packages" target="_blank">
     <img src="img/packages.png" alt="Test Report 2" class="img-fluid rounded mb-3">
@@ -462,6 +469,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
