--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
         </div>
 		<img class="img-fluid w-100" src="img/allurereport.png" alt="">
-                                        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-											<a href="img/allurereport.png" data-lightbox="portfolio">
-												<a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
-                                                <i class="fa fa-4x fa-plus text-white"></i> 
-                                            </a>
-                                        </div>
+<div class="portfolio-btn d-flex align-items-center justify-content-center">
+  <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+    <i class="fa fa-4x fa-plus text-white"></i>
+  </a>
+</div>
+
         <!-- <div class="col-12 text-center">
-            <!-- כאן תוסיפי את התמונות שלך -->
+            <!-- כאן תוסיפי את התמונות שלך 
            <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
     <img src="img/allurereport.png" alt="Test Report 1" class="img-fluid rounded mb-3">
 			   <i class="fa fa-4x fa-plus text-white"></i>
@@ -469,6 +469,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
