--- a/index.html
+++ b/index.html
@@ -209,16 +209,17 @@
 
 <!-- Test Reports Section -->
 <div class="container bg-white pt-5 pb-3" id="test-reports">
-    <div class="row px-3">
-        <div class="col-12">
-            <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
-        </div>
-		<img class="img-fluid w-100" src="img/allurereport.png" alt="">
-<div class="portfolio-btn d-flex align-items-center justify-content-center">
-  <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
-    <i class="fa fa-4x fa-plus text-white"></i>
-  </a>
-</div>
+   <div class="col-md-6 mb-4 portfolio-item">
+    <div class="position-relative overflow-hidden mb-2">
+      <img class="img-fluid w-100" src="img/allurereport.png" alt="Test Report 1">
+      <div class="portfolio-btn d-flex align-items-center justify-content-center">
+        <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+          <i class="fa fa-4x fa-plus text-white"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
 
         <!-- <div class="col-12 text-center">
             <!-- כאן תוסיפי את התמונות שלך 
@@ -469,6 +470,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
