--- a/index.html
+++ b/index.html
@@ -213,16 +213,16 @@
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
         </div>
-<div class="col-md-6 mb-3 portfolio-item">
-  <div class="position-relative overflow-hidden mb-3">
-    <img class="img-fluid rounded mb-3" src="img/allurereport.png" alt="Test Report 1">
-    <div class="portfolio-btn d-flex align-items-center justify-content-center">
-      <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
-        <i class="fa fa-4x fa-plus text-white"></i>
-      </a>
+<div class="col-md-6 mb-4 portfolio-item">
+      <div class="position-relative overflow-hidden mb-2">
+        <img class="img-fluid w-100" src="img/allurereport.png" alt="Test Report 1">
+        <div class="portfolio-btn d-flex align-items-center justify-content-center">
+          <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+            <i class="fa fa-4x fa-plus text-white"></i>
+          </a>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
 
 
 
@@ -475,6 +475,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
