--- a/index.html
+++ b/index.html
@@ -213,16 +213,18 @@
         <div class="col-12">
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
         </div>
-<div class="col-md-6 mb-4 portfolio-item">
-      <div class="position-relative overflow-hidden mb-2">
-        <img class="img-fluid w-100" src="img/allurereport.png" alt="Test Report 1">
-        <div class="portfolio-btn d-flex align-items-center justify-content-center">
-          <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
-            <i class="fa fa-4x fa-plus text-white"></i>
-          </a>
-        </div>
-      </div>
+<!-- Report 1 -->
+<div class="col-12 text-center mb-3">
+  <div class="position-relative overflow-hidden d-inline-block w-100">
+    <img src="img/allurereport.png" alt="Allure Report" class="img-fluid rounded mb-3 w-100">
+    <div class="portfolio-btn d-flex align-items-center justify-content-center">
+      <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+        <i class="fa fa-4x fa-plus text-white"></i>
+      </a>
     </div>
+  </div>
+</div>
+
 
 
 
@@ -475,6 +477,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
