--- a/index.html
+++ b/index.html
@@ -214,16 +214,18 @@
             <h2 class="title position-relative pb-2 mb-4">Test Reports</h2>
         </div>
 <!-- Report 1 -->
-<div class="col-12 text-center mb-3">
-  <div class="position-relative overflow-hidden d-inline-block w-100">
-    <img src="img/allurereport.png" alt="Allure Report" class="img-fluid rounded mb-3 w-100">
-    <div class="portfolio-btn d-flex align-items-center justify-content-center">
-      <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+<!-- Report 1 -->
+<div class="col-12 text-center mb-4">
+  <div class="position-relative d-inline-block w-100">
+    <a href="https://shanip89.github.io/FinalAutomation_project/1/index.html" target="_blank">
+      <img src="img/allurereport.png" alt="Allure Report" class="img-fluid rounded mb-3 w-100">
+      <div class="portfolio-btn d-flex align-items-center justify-content-center">
         <i class="fa fa-4x fa-plus text-white"></i>
-      </a>
-    </div>
+      </div>
+    </a>
   </div>
 </div>
+
 
 
 
@@ -477,6 +479,7 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
 
 
 
